--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 Shop deals in Electroincs
             </div>
         </div>
-        <div  style="background-image: url(images/mainfront.jpg);"></div>
+        <div  style="background-image: url(mainfront.jpg);"></div>
     </header>
      
     <!-- Hero section -->
@@ -94,7 +94,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Fitness Needs</h2>
-                <div class="box-img" style="background-image: url('images/box1_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('box1_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="box">
             <div class="box-content">
                 <h2> Personal Health Care</h2>
-                <div class="box-img" style="background-image: url('images/box2_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('box2_image.jpg');"></div>
                 <p>See more</p>
             </div>
 
@@ -111,7 +111,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Furniture</h2>
-                <div class="box-img" style="background-image: url('images/box3_image.jpg');"></div>
+                <div class="box-img" style="background-image: url('box3_image.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -119,7 +119,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Electronics</h2>
-                <div class="box-img" style="background-image: url('images/electronicsnew.jpg');"></div>
+                <div class="box-img" style="background-image: url('electronicsnew.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -127,7 +127,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Beauty Picks</h2>
-                <div class="box-img" style="background-image: url('images/beauty.jpg');"></div>
+                <div class="box-img" style="background-image: url('beauty.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Shoes</h2>
-                <div class="box-img" style="background-image: url('images/shoes.jpg');"></div>
+                <div class="box-img" style="background-image: url('shoes.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>New Arrival in Toys</h2>
-                <div class="box-img" style="background-image: url('images/toys.jpg');"></div>
+                <div class="box-img" style="background-image: url('toys.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -151,7 +151,7 @@
         <div class="box">
             <div class="box-content">
                 <h2>Discover Fashion Trends</h2>
-                <div class="box-img" style="background-image: url('images/fashion.jpg');"></div>
+                <div class="box-img" style="background-image: url('fashion.jpg');"></div>
                 <p>See more</p>
             </div>
         </div>
@@ -167,10 +167,10 @@
                 <h1>Today Deals <a> See more</a></h1>
             </div>
             <div class="img">
-                <img src="images/deal1.jpg" alt="">
-                <img src="images/deal2.jpg" alt="">
-                <img src="images/deal3.jpg" alt="">
-                <img src="images/deal4.jpg" alt="">
+                <img src="deal1.jpg" alt="">
+                <img src="deal2.jpg" alt="">
+                <img src="deal3.jpg" alt="">
+                <img src="deal4.jpg" alt="">
             </div>
         </div>
         <!-- Deal 2 -->
@@ -179,10 +179,10 @@
                 <h1>Up to 50%off | Home Decor <a> Shop Now</a></h1>
             </div>
             <div class="img">
-                <img src="images/decor.jpg" alt="">
-                <img src="images/decor2.jpg" alt="">
-                <img src="images/decor3.jpg" alt="">
-                <img src="images/decor4.jpg" alt="">
+                <img src="decor.jpg" alt="">
+                <img src="decor2.jpg" alt="">
+                <img src="decor3.jpg" alt="">
+                <img src="decor4.jpg" alt="">
             </div>
         </div>
     </div>
